<resources>
    <string name="app_name">Sleep - D-Bug Station</string>
    <string name="music_name_placeholder">Music Name</string>
    <string name="_1_30">01:30</string>
    <string name="_45_00">45:00</string>
    <string name="get_started">Get Started</string>
    <string name="description_paragraph">Explore the new king of sleep.It uses sound\nand vesualization to create perfect conditions\nfor refreshing sleep.</string>
    <string name="description_paragraph_2">Soothing bedtime stories to help you fall into a deep and natural sleep</string>
    <string name="description_paragraph_3">Ease the mind into a restful night’s sleep with these deep, amblent tones.</string>
    <string name="welcome">Welcome To Sleep</string>
    <string name="dot">.</string>
    <string name="sleep_music">Sleep Music</string>
    <string name="_00_00">00:00</string>
    <string name="tab_all">All</string>
    <string name="my">My</string>
    <string name="anxious">Anxious</string>
    <string name="sleep">Sleep</string>
    <string name="kids">Kids</string>
    <string name="new_content">New Content?</string>
    <string name="xx_xxx_listening">XX, XXX Listening</string>
    <string name="xx_xxx_favorites">XX, XXX Favorites</string>
    <string name="play">Play</string>
    <string name="related">Related</string>
    <string name="the_ocean_moon">The Ocean Moon</string>
    <string name="caption_sample">Non-stop 8- hour mixes of our\nmost popular sleep audio</string>
    <string name="start">Start</string>
</resources>