<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_fill"
        tools:context=".activities.MusicInfoActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/play_music"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/musicImage"
                    style="@style/BottomCorners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/music_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/helvetica_neue_bd"
                    android:text="@string/anxious"
                    android:textColor="@color/Color_White"
                    android:textSize="34sp"
                    app:layout_constraintTop_toBottomOf="@id/musicImage" />

                <TextView
                    android:id="@+id/music_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/helvetica_neue_bd"
                    android:text="@string/music_name_placeholder"
                    android:textAllCaps="true"
                    android:textColor="@color/subtext_color"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/music_name"
                    app:layout_constraintTop_toBottomOf="@id/music_name" />

                <ImageView
                    android:id="@+id/music_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ellipse_1"
                    app:layout_constraintBottom_toBottomOf="@id/music_duration"
                    app:layout_constraintStart_toEndOf="@id/music_duration"
                    app:layout_constraintTop_toTopOf="@id/music_duration" />

                <TextView
                    android:id="@+id/music_album"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/helvetica_neue_bd"
                    android:gravity="start"
                    android:text="@string/dot"
                    android:textAllCaps="true"
                    android:textColor="@color/subtext_color"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/music_dot"
                    app:layout_constraintTop_toBottomOf="@id/music_name" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/helvetica_neue_light"
                    android:text="@string/description_paragraph_3"
                    android:textColor="@color/subtext_color"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/music_album" />

                <TextView
                    android:id="@+id/favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:drawablePadding="10dp"
                    android:text="@string/xx_xxx_favorites"
                    android:textColor="@color/Color_White"
                    app:drawableStartCompat="@drawable/favorite_selected_state"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description" />

                <TextView
                    android:id="@+id/listening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:drawablePadding="10dp"
                    android:text="@string/xx_xxx_listening"
                    android:textColor="@color/Color_White"
                    app:drawableStartCompat="@drawable/favorite_selected_state"
                    app:layout_constraintLeft_toRightOf="@id/favorites"
                    app:layout_constraintTop_toBottomOf="@id/description" />

                <TextView
                    android:id="@+id/relatedHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/helvetica_neue_med"
                    android:text="@string/related"
                    android:textColor="@color/Color_White"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@id/favorites" />

                <ImageView
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:src="@color/subtext_color"
                    app:layout_constraintTop_toBottomOf="@id/favorites" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/related"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/relatedHeader" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/back_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/favorite_state"
                app:layout_constraintRight_toLeftOf="@id/save_download"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/save_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/savedownload"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_music"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/helvetica_neue_bd"
            android:padding="20dp"
            android:text="@string/play"
            android:textAllCaps="true"
            android:textColor="@color/Color_White"
            app:backgroundTint="@color/button_background"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>